Upgrade Java runtime from 17 to 21 LTS with modernized String formatting